tests/lean/wf2.lean.expected.out
wf2.lean:3:8-3:17: error: unsolved goals
fst✝ snd✝ : Nat
⊢ fst✝ - 1 < fst✝
